// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessPage component Approving / Rejecting a work order when variation is approved should render success screen with approved message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <div
      class="lbh-announcement__content"
    >
      <p>
        You have approved a variation for 
        <strong>
          work order 10000012
        </strong>
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Back to dashboard
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Approving / Rejecting a work order when variation is rejected should render success screen with rejected message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <div
      class="lbh-announcement__content"
    >
      <p>
        You have rejected a variation for 
        <strong>
          work order 10000012
        </strong>
      </p>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Back to dashboard
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair High cost (over raise limit) authorisation should render a success screen with a warning message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair works order created
    </h3>
    <div
      class="lbh-announcement__content"
    >
      <p>
        Works order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <div
    class="govuk-warning-text lbh-warning-text"
  >
    <span
      aria-hidden="true"
      class="govuk-warning-text__icon"
    >
      !
    </span>
    <strong
      class="govuk-warning-text__text"
    >
      <span
        class="govuk-warning-text__assistive"
      >
        Warning
      </span>
      Works order 10000012 requires authorisation. Please request authorisation from a manager.
    </strong>
  </div>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair With Emergency and Immediate DLO repairs text should render text that Emergency and immediate DLO repairs are sent directly to the Planners 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair works order created
    </h3>
    <div
      class="lbh-announcement__content"
    >
      <p>
        Works order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <p>
        <strong>
          Emergency and immediate DLO repairs are sent directly to the Planners. An appointment does not need to be booked.
        </strong>
      </p>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair With an external scheduler URL should render text with a link to schedule externally 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair works order created
    </h3>
    <div
      class="lbh-announcement__content"
    >
      <p>
        Works order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`SuccessPage component Raising a repair Within raise limit should render a success screen without a warning message 1`] = `
<DocumentFragment>
  <section
    class="text-align-center lbh-page-announcement"
  >
    <h3
      class="lbh-page-announcement__title"
    >
      Repair works order created
    </h3>
    <div
      class="lbh-announcement__content"
    >
      <p>
        Works order number
      </p>
      <strong
        class="govuk-!-font-size-24"
      >
        10000012
      </strong>
    </div>
  </section>
  <ul
    class="lbh-list lbh-!-margin-top-9"
  >
    <li>
      <a
        class="lbh-link"
        href="/work-orders/10000012"
      >
        <strong>
          View work order
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/properties/12345678"
      >
        <strong>
          Back to 12 Random Lane
        </strong>
      </a>
    </li>
    <li>
      <a
        class="lbh-link"
        href="/"
      >
        <strong>
          Start a new search
        </strong>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
